--- a/web/themes/custom/theport/templates/global/global.css
+++ b/web/themes/custom/theport/templates/global/global.css
@@ -11901,17 +11901,22 @@ code {
 /*
  Make copy as readable as possible by using a serif font and adapting the size to the page.
 */
-p {
+p,
+p + ol > li,
+p + ul > li {
   font-family: Georgia, Cambria, "Times New Roman", "Bitstream Vera Serif", Times, serif;
   max-width: 50em;
   font-size: 110%;
   text-rendering: optimizelegibility;
 }
 @media screen and (min-width: 992px) {
-  p {
+  p,
+p + ol > li,
+p + ul > li {
     font-size: 120%;
   }
 }
+
 p .btn, p button.link, p .button {
   font-family: var(--bs-font-sans-serif);
 }
